--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 body {
   margin: 0;
-  background: rgb(4, 35, 63);
+  background: rgb(2,0,36);
+  background: linear-gradient(90deg, rgba(2,0,36,1) 23%, rgba(9,9,121,1) 76%, rgba(6,40,82,1) 99%);
 }
